# cterasdk-mcp

./: .cursorrules  .gitignore  Dockerfile  README.md  cli.js  cursorrules.md  index.js  package-lock.json  package.json  pyproject.toml  readme-mcp.md  requirements.txt
src/cterasdk_mcp/: __init__.py  agent.py  cli.py  core.py
